--- a/meteor_core/meteor.html
+++ b/meteor_core/meteor.html
@@ -1,5 +1,7 @@
 <head>
   <title>Todo List</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+  <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
