--- a/meteor_core/meteor.html
+++ b/meteor_core/meteor.html
@@ -1,6 +1,7 @@
 <head>
   <title>Starter SaaS App</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
 </head>
 
 <body>
